--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -6,3 +6,16 @@ main{
 main>div{
     border: 1px solid lightgray;
 }
+
+main .input-form-div{
+    display: flex;
+    flex-direction: column;
+}
+
+main .input-form-div input+label{
+    margin-top: 10px;
+}
+
+main .input-form-div h3{
+    margin-top: 30px;
+}
